--- a/templates/editBucketList.html
+++ b/templates/editBucketList.html
@@ -12,6 +12,7 @@
         </div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
+            <li class="active"><a href="/search/">Search</a></li>
             <li class="active"><a href="/logout/">Logout</a></li>
         </ul>
     </div>
