--- a/templates/viewBucketList.html
+++ b/templates/viewBucketList.html
@@ -12,7 +12,8 @@
         </div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            {% if loggedin == 1%}
+            {% if session['logged_in'] %}
+            <li class="active"><a href="/search/">Search</a></li>
             <li class="active"><a href="/logout/">Logout</a></li>
             {% endif%}
         </ul>
