--- a/templates/editBucketList.html
+++ b/templates/editBucketList.html
@@ -35,8 +35,8 @@
                Share Link
             </h4>
          </div>
-         <div class = "modal-body">
-            <span>http://127.0.0.1:5000/viewBucketList?listID={{bucket_url}}&username={{username}}</span>
+         <div class = "modal-body">             
+            <input onfocus="this.select()" class="form-control" type="text" value="http://127.0.0.1:5000/viewBucketList?listID={{bucket_url}}&username={{username}}">
          </div>
       </div>
    </div>
